fix overflow bugs and add some styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -154,7 +154,11 @@
 
 .content-toc-active {
   transition: background-color 0.3s ease; /* 배경색 변화에 부드러운 효과 적용 */
-  @apply bg-slate-100 pl-1 rounded-sm dark:bg-slate-700/90 transition-all;
+  @apply bg-slate-100 rounded-sm dark:bg-slate-700/90 transition-all;
+}
+
+.content-toc-active::before {
+  content: '> ';
 }
 
 
